--- a/stylesheet.css
+++ b/stylesheet.css
@@ -244,7 +244,7 @@ a {
 
 .main {
   height: 70vh;
-  width: 100%;
+  width: 100vw;
   /* background-image: url("andreas-gucklhorn-mawU2PoJWfU-unsplash.jpg");
   background-size: 1000px 600px; */
 }
