--- a/stylesheet.css
+++ b/stylesheet.css
@@ -385,6 +385,8 @@ a {
   .text {
     font-size: 20px;
     text-align: center;
+    margin-left:7%;
+    margin-right: 7%;
   }
   .title {
     display: none;
