--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,12 +46,12 @@ a {
 
 .header-fade-in {
   width: 100%;
-  height: 90px;
+  height: 80px;
   float: none;
   display: block;
   background: #ffffff;
   box-shadow: 0 0 10px rgba(0,0,0,.05);
-  margin-top: -130px;
+  margin-top: -170px;
   margin-left: auto;
   margin-right: auto;
   position: fixed;
@@ -88,23 +88,24 @@ a {
   background: transparent;
   text-align: center;
   color: #2d3436;
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 700;
-  padding-top: 23px;
-  padding-bottom: 23px;
   position: relative;
-  float: right;
+  float: left;
   /* display: none; */
 }
 
 .menu-toggle {
-  height: 90px;
+  height: 30px;
+  width: 30px;
+  border: 0;
+  outline: 0;
+  padding: 0;
   display: flex;
   -webkit-box-align: center;
   align-items: center;
-  float: left;
+  float: right;
   background: transparent;
-  margin-right: 12px;
 }
 
 .hamburger {
@@ -112,7 +113,7 @@ a {
   position: absolute;
   transition: 0.5s;
   width: 26px;
-  height: 3px;
+  height: 2.5px;
   border-radius: 10px;
 }
 
@@ -128,7 +129,7 @@ a {
   content: '';
   position:absolute;
   width: 26px;
-  height: 3px;
+  height: 2.5px;
   background:#090832;
   border-radius: 10px;
 }
@@ -137,15 +138,14 @@ a {
   content: '';
   position:absolute;
   width: 26px;
-  height: 3px;
+  height: 2.5px;
   background:#090832;
   border-radius: 10px;
 }
 
 .responsive-title-wrapper {
   height: 100%;
-  width: 55%;
-  margin-right: 0;
+  margin-right: 40%;
 }
 
 .nav-main {
@@ -399,6 +399,10 @@ a {
   }
   .team-headline {
     font-size: 32px;
+  }
+  .header-inner {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
 
